# libHSL

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindLibHSL.cmake
doc/: index.txt
include/: Bounds.h  Classification.h  Color.h  Error.h  Exception.h  Field.h  FileIO.h  Filter.h  Header.h  IdDefinitions.h  Index.h  Point.h  Reader.h  Schema.h  Singleton.h  SpatialReference.h  Transform.h  Updater.h  Variant.h  WaveformPacketRecord.h  Writer.h  hsl.h  hslDefinitions.h  hslLIB.h
include/detail/: binary.hpp  endian.hpp  private_utility.hpp
include/index/: IndexCell.h  IndexOutput.h
samples/: CMakeLists.txt  read.cpp  read_band.cpp  update.cpp  utility.hpp  write.cpp
src/: CMakeLists.txt  Classification.cpp  Color.cpp  Error.cpp  Field.cpp  FileIO.cpp  Filter.cpp  Header.cpp  Index.cpp  Point.cpp  Reader.cpp  Schema.cpp  SpatialReference.cpp  Transform.cpp  Updater.cpp  Variant.cpp  WaveformPacketRecord.cpp  Writer.cpp
